[tool.poetry]
name = "course-work3"
version = "0.1.0"
description = ""
authors = ["Galina Pudovkina <galinapudovkina8@mail.ru>"]
readme = "README.md"
packages = [{include = "course_work3"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.2"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
